# pytensorrt

./: .gitignore  CMakeLists.txt  README.md  setup.py
demo/: coco.names  t_yolo.py
pytrt/: v8trans.py  yolo_infer.py
pytrt/_lib/YoloModel/: CMakeLists.txt  bind_single_inference.cpp  objectdetect.cpp  objectdetect.h
